          parsed by SQL::Translator::Parser::DBIx::Class
        - Stop the SQLT parser from auto-adding indexes identical to the
          Primary Key
        - InflateColumn::DateTime refactoring to allow fine grained method
          overloads
        - Fix ResultSetColumn improperly selecting more than the requested
          column when +columns/+select is present
        - Fix regression in context sensitiveness of deployment_statements
        - Fix regression resulting in overcomplicated query on
          search_related from prefetching resultsets
        - Fix regression on all-null returning searches (properly switch
          LEFT JOIN to JOIN in order to distinguish between both cases)
        - Fix regression in groupedresultset count() used on strict-mode
          MySQL connections
        - Better isolation of RNO-limited queries from the rest of a
          prefetching resultset
        - New MSSQL specific resultset attribute to allow hacky ordered
          subquery support
        - Fix nasty schema/dbhandle leak due to SQL::Translator
        - Initial implementation of a mechanism for Schema::Version to
          apply multiple step upgrades
        - Fix regression on externally supplied $dbh with AutoCommit=0
        - FAQ "Custom methods in Result classes"
        - Cookbook POD fix for add_drop_table instead of add_drop_tables
        - Schema POD improvement for dclone

0.08115 2009-12-10 09:02:00 (CST)
        - Real limit/offset support for MSSQL server (via Row_Number)
        - Fix distinct => 1 with non-selecting order_by (the columns
          in order_by also need to be aded to the resulting group_by)
        - Do not attempt to deploy FK constraints pointing to a View
        - Fix count/objects from search_related on limited resultset
        - Stop propagating distinct => 1 over search_related chains
        - Make sure populate() inherits the resultset conditions just
          like create() does